--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,7 @@
 remote_theme: pages-themes/cayman@v0.2.0
 plugins:
 - jekyll-remote-theme # add this line to the plugins list if you already have one
+
+title: Car Tracker 1.0 beta
+description: Автоматизированный подсчёт транспотного потока по видео
+show_downloads: "true"
