--- a/_config.yml
+++ b/_config.yml
@@ -8,3 +8,4 @@ show_downloads: "true"
 actual_ver: "1.0beta"
 dist_name: "CarTrackerInstaller"
 dist_ext: ".exe"
+dist_link: "https://itdoris.github.io/car-tracker/dist/CarTrackerInstaller1.0beta.exe"
