--- a/_config.yml
+++ b/_config.yml
@@ -8,4 +8,4 @@ show_downloads: "true"
 actual_ver: "1.0beta"
 dist_name: "CarTrackerInstaller"
 dist_ext: ".exe"
-dist_link: "https://itdoris.github.io/car-tracker/dist/CarTrackerInstaller1.0beta.exe"
+dist_link: "https://cloud.mail.ru/public/WNm3/8D7mZJKE9"
