--- a/_config.yml
+++ b/_config.yml
@@ -8,4 +8,4 @@ show_downloads: "true"
 actual_ver: "1.0beta"
 dist_name: "CarTrackerInstaller"
 dist_ext: ".exe"
-dist_link: "https://cloud.mail.ru/public/WNm3/8D7mZJKE9"
+dist_link: "https://disk.yandex.ru/d/2fC2RJ6rRPlC9w"
